test/expected/explain_sib.out
explain signed bool x
        ^
9: error: "signed bool" is illegal for built-in type
